fix: not showing form popup after send

--- a/contato/style.css
+++ b/contato/style.css
@@ -153,22 +153,19 @@ a {
   animation: appear 1s backwards;
 }
 
-.contact-form {
-  animation: appear 1s backwards;
-}
-
 h1 {
   animation-delay: 0.2s;
 }
 
 p {
-  animation-delay: 0.8s;
+  animation-delay: 0.5s;
 }
 
 a {
   animation-delay: 1.6s;
 }
 .contact-form {
+  animation: appear 1s backwards;
   animation-delay: 0.5s;
   background-color: rgba(245, 222, 179, 0.8);
 }
@@ -272,4 +269,41 @@ ul {
   .footer-col {
     width: 100%;
   }
+}
+
+.custom-alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.custom-alert-content {
+  background-color: white;
+  padding: 30px;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+  color: #111;
+}
+.custom-alert-content p {
+  animation: appear 0.4s backwards;
+  padding-bottom: 15px;
+}
+.btn-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.hidden {
+  display: none;
 }
